# aerial_object_classification

./: .env  .gitignore  README.md  app.py  download_models.py  pyproject.toml  question.docx  requirements.txt  run_all.py
notebooks/: Aerial_Object_Classification_using_Deep_Learning.ipynb  Aerial_Object_Detection_Dataset_YOLOv8_Format.ipynb
results/yolov8_results/: args.yaml  results.csv
src/: config.py  data_loader.py  evaluate_classification.py  models.py  prepare_yolo_dataset.py  train_classification.py  train_yolo.py
test/: test_yolo.py
