[project]
name = "aerial-object-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gdown>=6.1.0",
    "keras-cv>=0.9.0",
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "opencv-python>=5.0.0.93",
    "pandas>=3.0.3",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "streamlit>=1.59.2",
    "tensorflow-cpu>=2.21.0",
    "tensorflow-hub>=0.16.1",
]
